--- a/service.yml
+++ b/service.yml
@@ -15,11 +15,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gke-test-service
+  name: itxy-xyz-github-service
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
     - port: 80
       targetPort: 5000
   selector:
-    app: gke-test
+    app: itxy-xyz-github
