--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -75,5 +75,5 @@ jobs:
         run: |-
           ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
           ./kustomize build . | kubectl apply -f -
-          kubectl rollout status deployment/$IMAGE
-          kubectl get services -o wide
+          kubectl rollout status deployment/$IMAGE -n itxy
+          kubectl get services -o wide -n itxy
