--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ server {
     listen       5000;
     server_name  localhost;
 
-    location / {
+    location /github {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
     }
@@ -30,3 +30,4 @@ server {
         root   /usr/share/nginx/html;
     }
 }
+
