--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,12 @@
 # limitations under the License.
 
 server {
-    listen       5000;
+    listen ${NGINX_PORT} default_server;
+
+    index index.html index.htm;
+    # NGINX is likely not running on the same scheme + port as the ALB, so be sure redirects stay relative.
+    absolute_redirect off;
+
     server_name  localhost;
 
     location /github {
