--- a/nginx.conf
+++ b/nginx.conf
@@ -21,6 +21,11 @@ server {
 
     server_name  localhost;
 
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+    }
+
     location /github {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
